[Fix] block title's font is too small on mobile

--- a/src/assets/scss/blocktitle.scss
+++ b/src/assets/scss/blocktitle.scss
@@ -7,13 +7,7 @@
     font-size: 15pt;
   }
   @media screen and (max-width: $max-width-medium-1) {
-    font-size: 12pt;
-  }
-  @media screen and (max-width: $max-width-small-0) {
-    // font-size: 10pt;
-  }
-  @media screen and (max-width: $max-width-small-1) {
-    font-size: 11pt;
+    font-size: 20pt;
   }
 }
 
